--- a/shop.html
+++ b/shop.html
@@ -86,9 +86,8 @@
                   class="cart_icon"
                   src="img\landing_page\cart4.svg"
                   alt="Shopping cart icon"
-                  onmouseover="cartMessage()"
                 />
-                <p class="cart_text" onmouseover="cartMessage()">Cart</p></a
+                <p class="cart_text">Cart</p></a
               >
             </li>
             <li class="nav-item">
