edit pasta and dessert price per quantity descriptions

--- a/shop.html
+++ b/shop.html
@@ -484,7 +484,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Cheesecake</h5>
-              <p class="card-text">99p each</p>
+              <p class="card-text">99p per slice</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -530,7 +530,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Blueberry Cake</h5>
-              <p class="card-text">£1.30 each</p>
+              <p class="card-text">£1.30 per slice</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -553,7 +553,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Strawberry Cake</h5>
-              <p class="card-text">£1.10 each</p>
+              <p class="card-text">£1.10 per slice</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -576,7 +576,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Chocolate Cake</h5>
-              <p class="card-text">£1.15 each</p>
+              <p class="card-text">£1.15 per slice</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -607,7 +607,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Penne</h5>
-              <p class="card-text">75p each</p>
+              <p class="card-text">75p per 500g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -630,7 +630,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Fettucine</h5>
-              <p class="card-text">75p each</p>
+              <p class="card-text">75p per 500g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -653,7 +653,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Rigatoni</h5>
-              <p class="card-text">£1 each</p>
+              <p class="card-text">£1 per 500g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -676,7 +676,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Spaghetti</h5>
-              <p class="card-text">70p each</p>
+              <p class="card-text">70p per 500g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -699,7 +699,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Farfalle</h5>
-              <p class="card-text">75p each</p>
+              <p class="card-text">75p per 500g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
