--- a/register.html
+++ b/register.html
@@ -191,7 +191,12 @@
             />
           </div>
           <p>By creating an account you agree to our Terms & Privacy</p>
-          <button type="submit" class="btn" onclick="registerMessage()">
+          <button
+            type="submit"
+            class="btn"
+            id="register_button"
+            onclick="registerMessage()"
+          >
             Register
           </button>
         </form>
