--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <header>
       <!--Bootstrap navbar-->
-      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
+      <!--<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand"
           ><img
             class="company_logo"
@@ -97,7 +97,7 @@
             </li>
           </ul>
         </div>
-      </nav>
+      </nav>-->
       <!--End of Bootstrap navbar-->
     </header>
     <main>
@@ -117,13 +117,11 @@
           <h5 id="mailing_list_prompt"></h5>
         </div>
       </div>
+      <!--
       <div id="carousel_container">
-        <img
-          class="carousel_side"
-          src="img\landing_page\lee-vue-P-oXFsK6STQ-unsplash.jpg"
-          alt="Three blocks of cheese and a bunch of red grapes on a round wooden board"
-        />
-        <!--Bootstrap image carousel:-->
+        <img class="carousel_side" src="img\landing_page\Logo.png" alt="" />
+        <img class="carousel_side" src="img\landing_page\Logo.png" alt="" />-->
+      <!--Bootstrap image carousel:
         <div
           id="carouselExampleInterval"
           class="carousel slide"
@@ -147,9 +145,9 @@
             </div>
             <div class="carousel-item">
               <img
-                src="img\landing_page\sergio-arze-wJLGRhZsn5w-unsplash.jpg"
+                src="img\landing_page\mae-mu-BxsGyQwjwaw-unsplash.jpg"
                 class="d-block w-100 carousel_image"
-                alt="A round loaf of bread"
+                alt="Loaves of breads on shelves"
               />
             </div>
           </div>
@@ -172,13 +170,9 @@
             <span class="sr-only">Next</span>
           </button>
         </div>
-        <!--End of image carousel-->
-        <img
-          class="carousel_side"
-          src="img\landing_page\heather-barnes-WbZesfqwR-A-unsplash.jpg"
-          alt="Multicoloured macarons"
-        />
-      </div>
+        End of image carousel-->
+      <!--<img class="carousel_side" src="img\landing_page\Logo.png" alt="" />
+      </div>-->
       <!--Mailing list form-->
       <div id="form_container">
         <form id="mailing_list" onsubmit="return false">
@@ -197,7 +191,7 @@
       </div>
     </main>
     <!--Social media links-->
-    <footer>
+    <!--<footer>
       <div class="social_media">
         <a
           href="https://twitter.com/?lang=en-gb"
@@ -218,7 +212,7 @@
           ><i class="fa-brands fa-instagram"></i
         ></a>
       </div>
-    </footer>
+    </footer>-->
     <!--Bootstrap JavaScript link-->
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
