adjust dimensions of elements on landing page for desktop screen

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <header>
       <!--Bootstrap navbar-->
-      <!--<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand"
           ><img
             class="company_logo"
@@ -97,7 +97,7 @@
             </li>
           </ul>
         </div>
-      </nav>-->
+      </nav>
       <!--End of Bootstrap navbar-->
     </header>
     <main>
@@ -117,11 +117,13 @@
           <h5 id="mailing_list_prompt"></h5>
         </div>
       </div>
-      <!--
       <div id="carousel_container">
-        <img class="carousel_side" src="img\landing_page\Logo.png" alt="" />
+        <div class="carousel_side"></div>
+        <div class="carousel_image"></div>
+        <div class="carousel_side"></div>
+        <!--<img class="carousel_side" src="img\landing_page\Logo.png" alt="" />
         <img class="carousel_side" src="img\landing_page\Logo.png" alt="" />-->
-      <!--Bootstrap image carousel:
+        <!--Bootstrap image carousel:
         <div
           id="carouselExampleInterval"
           class="carousel slide"
@@ -171,8 +173,8 @@
           </button>
         </div>
         End of image carousel-->
-      <!--<img class="carousel_side" src="img\landing_page\Logo.png" alt="" />
-      </div>-->
+        <!--<img class="carousel_side" src="img\landing_page\Logo.png" alt="" />-->
+      </div>
       <!--Mailing list form-->
       <div id="form_container">
         <form id="mailing_list" onsubmit="return false">
@@ -191,7 +193,7 @@
       </div>
     </main>
     <!--Social media links-->
-    <!--<footer>
+    <footer>
       <div class="social_media">
         <a
           href="https://twitter.com/?lang=en-gb"
@@ -212,7 +214,8 @@
           ><i class="fa-brands fa-instagram"></i
         ></a>
       </div>
-    </footer>-->
+    </footer>
+    -->
     <!--Bootstrap JavaScript link-->
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
