edit text on landing page for desktop screen

--- a/index.html
+++ b/index.html
@@ -106,10 +106,8 @@
         alt="Piles of raw leeks, carrots, courgettes, onion, broccoli and runner beans"
       >
         <div id="text_container">
-          <h1 id="main_title" onmouseover="discountMessage()">
-            Fig and Pepper
-          </h1>
-          <p>
+          <h1 id="main_title" onmouseover="discountMessage()">Fig & Pepper</h1>
+          <p id="description">
             Fresh, locally sourced produce delivered to your door. Try our award
             winning cheeses, treat yourself to one of our handmade desserts or
             whip up a quick dinner with our pasta range.
