replace carousel images

--- a/index.html
+++ b/index.html
@@ -116,12 +116,16 @@
         </div>
       </div>
       <div id="carousel_container">
-        <div class="carousel_side"></div>
+        <!--<div class="carousel_side"></div>
         <div class="carousel_image"></div>
-        <div class="carousel_side"></div>
-        <!--<img class="carousel_side" src="img\landing_page\Logo.png" alt="" />
-        <img class="carousel_side" src="img\landing_page\Logo.png" alt="" />-->
-        <!--Bootstrap image carousel:
+        <div class="carousel_side"></div>-->
+        <!--<img class="carousel_side" src="img\landing_page\Logo.png" alt="" />-->
+        <img
+          class="carousel_side"
+          src="img\landing_page\lee_vue_cheese.png"
+          alt="Cheeseboard"
+        />
+        <!--Bootstrap image carousel:-->
         <div
           id="carouselExampleInterval"
           class="carousel slide"
@@ -130,7 +134,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-interval="10000">
               <img
-                src="img\landing_page\Logo.png
+                src="img\landing_page\carousel_logo.png
                 "
                 class="d-block w-100 carousel_image"
                 alt="Fig and Pepper logo"
@@ -138,16 +142,16 @@
             </div>
             <div class="carousel-item" data-interval="2000">
               <img
-                src="img\landing_page\clark-douglas-17ZU9BPy_Q4-unsplash.jpg"
+                src="img\landing_page\giancarlo_revolledo_pasta.png"
                 class="d-block w-100 carousel_image"
-                alt="Bowl of spaghetti on a wooden table with a glass of wine and cutlery"
+                alt="Spaghetti and prawns in a bowl with a sprig of rosemary"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="img\landing_page\mae-mu-BxsGyQwjwaw-unsplash.jpg"
+                src="img\landing_page\sergio_arze_bread.png"
                 class="d-block w-100 carousel_image"
-                alt="Loaves of breads on shelves"
+                alt="Round loaf of bread"
               />
             </div>
           </div>
@@ -170,8 +174,12 @@
             <span class="sr-only">Next</span>
           </button>
         </div>
-        End of image carousel-->
-        <!--<img class="carousel_side" src="img\landing_page\Logo.png" alt="" />-->
+        <!--End of image carousel-->
+        <img
+          class="carousel_side"
+          src="img\landing_page\heather_barnes_macarons.png"
+          alt="Stack of pastel coloured macarons"
+        />
       </div>
       <!--Mailing list form-->
       <div id="form_container">
