update navbar logo and cart link on all pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a class="navbar-brand"
           ><img
             class="company_logo"
-            src="img\landing_page\Logo.png
+            src="img\landing_page\navbar_logo.png
           "
             alt="Fig and Pepper logo"
         /></a>
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./register.html">Log in/register</a>
+              <a class="nav-link" href="register.html">Log in/register</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -81,19 +81,10 @@
               </div>
             </li>
           </ul>
+
           <ul class="nav navbar-nav mr-sm-2">
-            <li class="nav-item">
-              <a class="nav-link"
-                ><img
-                  class="cart_icon"
-                  src="img\landing_page\cart4.svg"
-                  alt="Shopping cart icon"
-                />
-                <p class="cart_text">Cart</p></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" id="cart_message"></a>
+            <li class="nav-item cart_text">
+              <a class="nav-link" href="#">Cart</a>
             </li>
           </ul>
         </div>
@@ -217,7 +208,6 @@
         ></a>
       </div>
     </footer>
-    -->
     <!--Bootstrap JavaScript link-->
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
