--- a/shop.html
+++ b/shop.html
@@ -34,7 +34,7 @@
         <a class="navbar-brand" href="./index.html"
           ><img
             class="company_logo"
-            src="img\landing_page\Logo.png
+            src="img\landing_page\navbar_logo.png
           "
             alt="Fig and Pepper logo"
         /></a>
@@ -80,18 +80,8 @@
             </li>
           </ul>
           <ul class="nav navbar-nav mr-sm-2">
-            <li class="nav-item">
-              <a class="nav-link"
-                ><img
-                  class="cart_icon"
-                  src="img\landing_page\cart4.svg"
-                  alt="Shopping cart icon"
-                />
-                <p class="cart_text">Cart</p></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" id="cart_message"></a>
+            <li class="nav-item cart_text">
+              <a class="nav-link" href="#">Cart</a>
             </li>
           </ul>
         </div>
