--- a/index.html
+++ b/index.html
@@ -97,11 +97,8 @@
         alt="Piles of raw leeks, carrots, courgettes, onion, broccoli and runner beans"
       >
         <div id="text_container">
-          <h1 id="main_title" onmouseover="discountMessage()">Fig & Pepper</h1>
-          <p id="description">
-            Fresh, locally sourced produce delivered to your door. Try our award
-            winning cheeses, treat yourself to one of our handmade desserts or
-            whip up a quick dinner with our pasta range.
+          <p id="description" onmouseover="discountMessage()">
+            Fresh, locally sourced produce delivered to your door.
           </p>
           <h5 id="mailing_list_prompt"></h5>
         </div>
