add additional photo grid to landing page and make responsive

--- a/index.html
+++ b/index.html
@@ -165,6 +165,23 @@
           alt="Stack of pastel coloured macarons"
         />
       </div>
+      <div id="additional_image_container">
+        <img
+          src="img\landing_page\sergio_arze_bread.png"
+          class="additional_image"
+          alt="Round loaf of bread"
+        />
+        <img
+          src="img\landing_page\sergio_arze_bread.png"
+          class="additional_image"
+          alt="Round loaf of bread"
+        />
+        <img
+          src="img\landing_page\sergio_arze_bread.png"
+          class="additional_image"
+          alt="Round loaf of bread"
+        />
+      </div>
       <!--Mailing list form-->
       <div id="form_container">
         <form id="mailing_list" onsubmit="return false">
