replace additional photo grid on landing page with single background image and make responsive

--- a/index.html
+++ b/index.html
@@ -165,22 +165,13 @@
           alt="Stack of pastel coloured macarons"
         />
       </div>
-      <div id="additional_image_container">
-        <img
-          src="img\landing_page\sergio_arze_bread.png"
-          class="additional_image"
-          alt="Round loaf of bread"
-        />
-        <img
-          src="img\landing_page\sergio_arze_bread.png"
-          class="additional_image"
-          alt="Round loaf of bread"
-        />
-        <img
-          src="img\landing_page\sergio_arze_bread.png"
-          class="additional_image"
-          alt="Round loaf of bread"
-        />
+      <!--Additional image for tablet and laptop screens-->
+      <div id="additional_image_container" alt="Raspberries">
+        <div id="additional_text_container">
+          <p id="additional_text">
+            Fresh, locally sourced produce delivered to your door.
+          </p>
+        </div>
       </div>
       <!--Mailing list form-->
       <div id="form_container">
