adjust height of background images on landing page laptop screen

--- a/index.html
+++ b/index.html
@@ -167,11 +167,7 @@
       </div>
       <!--Additional image for tablet and laptop screens-->
       <div id="additional_image_container" alt="Raspberries">
-        <div id="additional_text_container">
-          <p id="additional_text">
-            Fresh, locally sourced produce delivered to your door.
-          </p>
-        </div>
+        <div id="additional_text_container"></div>
       </div>
       <!--Mailing list form-->
       <div id="form_container">
