--- a/register.html
+++ b/register.html
@@ -138,7 +138,7 @@
             type="submit"
             class="btn"
             id="login_button"
-            onclick="loginMessage()"
+            onclick="checkLoginDetails()"
           >
             Log in
           </button>
@@ -188,7 +188,7 @@
             type="submit"
             class="btn"
             id="register_button"
-            onclick="registerMessage()"
+            onclick="checkRegisterDetails()"
           >
             Register
           </button>
