adjust spacing between product categories on shop page

--- a/shop.html
+++ b/shop.html
@@ -90,10 +90,9 @@
     </header>
     <!--Start of products-->
     <div id="products">
-      <div class="space" id="fruit"></div>
       <!--Product category-->
       <section id="top_section">
-        <h4 class="category_title">Fruit</h4>
+        <h4 class="category_title" id="fruit">Fruit</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
@@ -213,10 +212,9 @@
         </div>
       </section>
       <!--End of product category-->
-      <div class="space" id="vegetables"></div>
       <!--Product category-->
       <section>
-        <h4 class="category_title">Vegetables</h4>
+        <h4 class="category_title" id="vegetables">Vegetables</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
@@ -336,10 +334,9 @@
         </div>
       </section>
       <!--End of product category-->
-      <div class="space" id="bread"></div>
       <!--Product category-->
       <section>
-        <h4 class="category_title">Bread</h4>
+        <h4 class="category_title" id="bread">Bread</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
@@ -459,11 +456,10 @@
         </div>
       </section>
       <!--End of product category-->
-      <div class="space" id="desserts"></div>
       <!--The following code was written in collaboration with Iuliia Ustkachkintseva and included with her permission-->
       <!--Product category-->
       <section>
-        <h4 class="category_title">Desserts</h4>
+        <h4 class="category_title" id="desserts">Desserts</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
@@ -583,10 +579,9 @@
         </div>
       </section>
       <!--End of product category-->
-      <div class="space" id="pasta"></div>
       <!--Product category-->
       <section>
-        <h4 class="category_title">Pasta</h4>
+        <h4 class="category_title" id="pasta">Pasta</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
@@ -706,10 +701,9 @@
         </div>
       </section>
       <!--End of product category-->
-      <div class="space" id="cheese"></div>
       <!--Product category-->
       <section id="final_section">
-        <h4 class="category_title">Cheese</h4>
+        <h4 class="category_title" id="cheese">Cheese</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
