replace existing images with copyright free images on shop page

--- a/shop.html
+++ b/shop.html
@@ -464,7 +464,7 @@
         <div class="product_category">
           <div class="card text-center">
             <img
-              src="img\shop_page\vanilla cheese cake.jpg"
+              src="img\shop_page\mink_mingle_cheesecake.jpg"
               class="card-img-top"
               alt="Vanilla cheesecake"
             />
@@ -556,7 +556,7 @@
           <!--Product card-->
           <div class="card text-center">
             <img
-              src="img\shop_page\Chocolate-fudge cake.jpg"
+              src="img\shop_page\ayesha_firdaus_chocolate_cake.jpg"
               class="card-img-top"
               alt="Chocolate fudge cake"
             />
@@ -609,7 +609,7 @@
           <!--Product card-->
           <div class="card text-center">
             <img
-              src="img\shop_page\pasta-fettuccine.jpg"
+              src="img\shop_page\macarena_moraga_fettucine.jpg"
               class="card-img-top"
               alt="Fettucine pasta"
             />
@@ -655,7 +655,7 @@
           <!--Product card-->
           <div class="card text-center">
             <img
-              src="img\shop_page\pasta-spaghetti.jpg"
+              src="img\shop_page\markus_winkler_spaghetti.jpg"
               class="card-img-top"
               alt="Spaghetti pasta"
             />
@@ -708,12 +708,12 @@
         <div class="product_category">
           <div class="card text-center">
             <img
-              src="img\shop_page\cheese-brie.jpg"
+              src="img\shop_page\zoe_schaeffer_sheep's_cheese.jpg"
               class="card-img-top"
-              alt="Brie cheese"
+              alt="Sheep's cheese"
             />
             <div class="card-body">
-              <h5 class="card-title">Brie</h5>
+              <h5 class="card-title">Sheep's Cheese</h5>
               <p class="card-text">£3.00 per 200g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -731,12 +731,12 @@
           <!--Product card-->
           <div class="card text-center">
             <img
-              src="img\shop_page\cheese-mozzarella.jpg"
+              src="img\shop_page\alexander_maasch_cheddar.jpg"
               class="card-img-top"
-              alt="Mozzarella cheese"
+              alt="Cheddar cheese"
             />
             <div class="card-body">
-              <h5 class="card-title">Mozzarella</h5>
+              <h5 class="card-title">Cheddar</h5>
               <p class="card-text">£2.15 for 250g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -754,7 +754,7 @@
           <!--Product card-->
           <div class="card text-center">
             <img
-              src="img\shop_page\cheese-stilton.jpg"
+              src="img\shop_page\towfiqu_barbhuiya_stilton.jpg"
               class="card-img-top"
               alt="Stilton cheese"
             />
@@ -777,7 +777,7 @@
           <!--Product card-->
           <div class="card text-center">
             <img
-              src="img\shop_page\cheese-parmesan.jpg"
+              src="img\shop_page\mike_dierken_parmesan.jpg"
               class="card-img-top"
               alt="Parmesan cheese"
             />
@@ -800,7 +800,7 @@
           <!--Product card-->
           <div class="card text-center" id="final_card">
             <img
-              src="img\shop_page\cheese-ricotta.jpg"
+              src="img\shop_page\aleksey_melkomukov_ricotta.jpg"
               class="card-img-top"
               alt="Ricotta cheese"
             />
@@ -826,6 +826,7 @@
       <!--End of code written in collaboration with Iuliia Ustkachkintseva-->
     </div>
     <!--End of products-->
+
     <!--Social media links:-->
     <footer class="additional_footer">
       <div class="social_media">
